--- a/Reborn/View/Base.lproj/Main.storyboard
+++ b/Reborn/View/Base.lproj/Main.storyboard
@@ -288,7 +288,7 @@ Cg
             <objects>
                 <viewController id="yhk-VJ-4nb" customClass="AddItemViewController" customModule="Reborn" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5tU-dT-BVc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eis-9Y-9bk" userLabel="Middle Scroll View">
@@ -1621,28 +1621,24 @@ Cg
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CyJ-kQ-0F2" userLabel="Bottom View">
                                 <rect key="frame" x="0.0" y="140" width="384" height="260"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYO-Uy-Oef" userLabel="Bottom Scroll View">
-                                        <rect key="frame" x="20" y="0.0" width="344" height="240"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="正在加载.." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kR8-uj-I8f">
-                                                <rect key="frame" x="132.5" y="110" width="79" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="kR8-uj-I8f" firstAttribute="centerY" secondItem="PYO-Uy-Oef" secondAttribute="centerY" id="NVa-bb-h8y"/>
-                                            <constraint firstItem="kR8-uj-I8f" firstAttribute="centerX" secondItem="PYO-Uy-Oef" secondAttribute="centerX" id="hsr-Wt-zBb"/>
-                                        </constraints>
-                                    </scrollView>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zYE-Pq-52Y">
+                                        <rect key="frame" x="30" y="0.0" width="324" height="230"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mXR-mX-f4e">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="PYO-Uy-Oef" firstAttribute="top" secondItem="CyJ-kQ-0F2" secondAttribute="top" id="3kl-9g-ciP"/>
-                                    <constraint firstAttribute="bottom" secondItem="PYO-Uy-Oef" secondAttribute="bottom" constant="20" id="WS4-Bv-VmI"/>
-                                    <constraint firstAttribute="trailing" secondItem="PYO-Uy-Oef" secondAttribute="trailing" constant="20" id="e7d-Ud-VPC"/>
-                                    <constraint firstItem="PYO-Uy-Oef" firstAttribute="leading" secondItem="CyJ-kQ-0F2" secondAttribute="leading" constant="20" id="j5j-Q3-63e"/>
+                                    <constraint firstAttribute="bottom" secondItem="zYE-Pq-52Y" secondAttribute="bottom" constant="30" id="Mg1-zX-7MG"/>
+                                    <constraint firstItem="zYE-Pq-52Y" firstAttribute="top" secondItem="CyJ-kQ-0F2" secondAttribute="top" id="VY7-lu-4Fl"/>
+                                    <constraint firstAttribute="trailing" secondItem="zYE-Pq-52Y" secondAttribute="trailing" constant="30" id="fE0-Ak-dHh"/>
+                                    <constraint firstItem="zYE-Pq-52Y" firstAttribute="leading" secondItem="CyJ-kQ-0F2" secondAttribute="leading" constant="30" id="mHi-lc-14K"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1663,7 +1659,7 @@ Cg
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bottomScrollView" destination="PYO-Uy-Oef" id="CYb-e8-v4E"/>
+                        <outlet property="bottomCollectionView" destination="zYE-Pq-52Y" id="0s3-wF-cmF"/>
                         <outlet property="bottomView" destination="CyJ-kQ-0F2" id="2RG-YG-MUZ"/>
                         <outlet property="currentMonthLabel" destination="NdA-gx-XZ9" id="L5j-jz-ZiQ"/>
                         <outlet property="middleStackView" destination="Vlj-yU-YBI" id="ffZ-6I-TD3"/>
